--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -1,6 +1,8 @@
 .cart {
     padding: 1rem;
     margin-top: 8rem;
+    width: 60%;
+    margin: 0 auto;
 
     .container {
         display: flex;
